--- a/content/filestructure.yml
+++ b/content/filestructure.yml
@@ -6,7 +6,11 @@
   file_child: setupTests.js
 - file: components
   file_child: articles/Articles.js
-  file_child: skeletons/SkeletonElement.js
   file_child: user/User.js
+- file: components/skeletons
+  file_child: SkeletonElement.js
+  file_child: Shimmer.js
+  file_child: SkeletonArticle.js
+  file_child: SkeletonProfile.js
 - file: public
   file_child: index.html
